2006-10-01  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/notes/index.rhtml: Fix to apply theme.

	* donrails/app/views/shared/default/comment.rhtml: move this file from shared/comment.rhtml.

	* donrails/app/views/notes/pick_article_a2.rhtml: Fix to use shared/comment.

	* rails/app/views/layouts/default/notes.rhtml: Fix: File path.

2006-09-30  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/unit/enrollment_test.rb (EnrollmentTest::test_2): Clanup.
	* donrails/test/functional/login_controller_test.rb: Add some test.
	* donrails/test/functional/notes_controller_test.rb: Change date to more futer.
	* donrails/test/fixtures/articles.yml: Add to test trackback.

	* donrails/app/models/enrollment.rb: remove unused enrollment cleanu function to article.rb.
	* donrails/app/models/article.rb: likewise.
	
	* donrails/app/controllers/login_controller.rb (LoginController::delete_enrollment): Cleanup.

	* donrails/app/models/article.rb (Article::enrollclean): New method. Add to remove unused enrollment.

	
	** NEW FEATURE: Add to send trackback function when Article create/update.
	* donrails/app/views/login/form_article.rhtml: likewise.
	* donrails/app/views/login/new_article.rhtml: likewise.
	* donrails/app/controllers/login_controller.rb 
	(LoginController::fix_article): likewise.
	(LoginController::add_article): likewise.
	* donrails/app/models/article.rb
	(Article::sendping): Fix to send enrollmented url.
	(Article::send_trackback): Fix when no article.body.

	* donrails/test/fixtures/blogpings.yml (first_blogping): Fix entry point for test.

	* donrails/test/functional/login_controller_test.rb (LoginControllerTest::test_fix_article): likewise.
	(LoginControllerTest::test_add_article): likewise.
	(LoginControllerTest::test_delete_blogping): fix entry point.

	* donrails/test/unit/enrollment_test.rb (EnrollmentTest::test_2): cleanup.

2006-09-29  ARAKI Yasuhiro  <yasu@debian.or.jp>
