@@ -1,3 +1,9 @@
+2006-10-04  Akira TAGOH  <at@gclab.org>
+
+	* donrails/lib/modules/wiliki.rb (DonRails::Wiliki::title_to_html):
+	fixed regexp to deal with nested bold/italic-syntax.
+	(DonRails::Wiliki::body_to_html): likewise.
+
 2006-10-01  ARAKI Yasuhiro  <yasu@debian.or.jp>
 
 	* donrails/app/views/notes/index.rhtml: Fix to apply theme.
